@@ -1,6 +1,7 @@
 # $NetBSD$
 
 DISTNAME=       voicevox_core-0.16.2
+PKGREVISION=    1
 CATEGORIES=     audio
 MASTER_SITES=   https://github.com/VOICEVOX/voicevox_core/releases/download/${PKGVERSION_NOREV}/
 DIST_SUBDIR=    voicevox_core
@@ -16,7 +17,7 @@ NO_BIN_ON_FTP=  yes
 NO_SRC_ON_FTP=  yes
 
 USE_LANGUAGES=  # none
-USE_TOOLS+=     pax tar
+USE_TOOLS+=     pax tar unzip
 
 WRKSRC=         ${WRKDIR}
 NO_CONFIGURE=   yes
@@ -44,6 +45,7 @@ EXTRACT_ONLY=           ${VV_DICT_DISTFILE}
 DOWNLOAD_BIN=   ${DISTDIR}/${DIST_SUBDIR}/download-linux-x64
 
 BUILD_DEPENDS+= ca-certificates-[0-9]*:../../security/ca-certificates
+BUILD_DEPENDS+= jq:../../devel/jq
 
 do-build:
 	${RUN} ${RM} -rf ${VV_OUTPUT}
@@ -72,5 +74,33 @@ do-build:
 do-install:
 	${RUN} ${INSTALL_DATA_DIR} ${DESTDIR}${PREFIX}/share/voicevox_core
 	cd ${VV_OUTPUT} && ${PAX} -rw . ${DESTDIR}${PREFIX}/share/voicevox_core
+	${RUN} ${INSTALL_DATA_DIR} ${DESTDIR}${PREFIX}/etc/voicevox_core
+	${RUN} ${SH} -c '\
+		set -e; \
+		out=${DESTDIR}${PREFIX}/etc/voicevox_core/models.json; \
+		${MKDIR} -p ${WRKDIR}/tmp; \
+		tmpdir=${WRKDIR}/tmp/models.$$; \
+		${RM} -rf $$tmpdir; \
+		${MKDIR} $$tmpdir; \
+		found=0; \
+		for vvm in ${DESTDIR}${PREFIX}/share/voicevox_core/models/vvms/*.vvm; do \
+			[ -f $$vvm ] || continue; \
+			found=1; \
+			base=$$(basename $$vvm .vvm); \
+			manifest=$$tmpdir/$$base.manifest.json; \
+			metas=$$tmpdir/$$base.metas.json; \
+			entry=$$tmpdir/$$base.entry.json; \
+			${TOOLS_PATH.unzip} -p $$vvm manifest.json > $$manifest; \
+			${TOOLS_PATH.unzip} -p $$vvm metas.json > $$metas; \
+			${PREFIX}/bin/jq -n --arg key "$$base" \
+				--slurpfile manifest $$manifest \
+				--slurpfile metas $$metas \
+				"{(\$$key): {manifest: \$$manifest[0], metas: \$$metas[0]}}" \
+				> $$entry; \
+		done; \
+		if [ $$found -eq 0 ]; then ${ECHO} "No vvm models found in ${DESTDIR}${PREFIX}/share/voicevox_core/models/vvms" 1>&2; exit 1; fi; \
+		${PREFIX}/bin/jq -s "add" $$tmpdir/*.entry.json > $$out; \
+		${RM} -rf $$tmpdir; \
+	'
 
 .include "../../mk/bsd.pkg.mk"
