@@ -1,4 +1,5 @@
 @comment $NetBSD$
+etc/voicevox_core/models.json
 share/voicevox_core/additional_libraries/libcublas.so.12
 share/voicevox_core/additional_libraries/libcublasLt.so.12
 share/voicevox_core/additional_libraries/libcudart.so.12
