@@ -10,6 +10,7 @@ UNRELEASED  ts-klassen  <qrpc@su-shiki.com>
 		* qrpc-prod: 0.1.0
 	Add pkgconf to qrpc-devel so pkg-config is available for openssl-sys builds.
 	Added q_vvx_worker with per-speaker queue support.
+	Generate voicevox_core models.json with jq from VVM manifests at install time.
 
 
 2025-12-25  ts-klassen  <qrpc@su-shiki.com>
